# _kdevqtdesigner

./: CMakeLists.txt  kdevqtdesigner.categories  kdevqtdesigner.kdev4
src/: CMakeLists.txt  qtdesigner.json  qtdesignerdocument.cpp  qtdesignerdocument.h  qtdesignerdocumentfactory.h  qtdesignerplugin.cpp  qtdesignerplugin.h  qtdesignerview.cpp  qtdesignerview.h  qtdesignerwidget.cpp  qtdesignerwidget.h
